# LM_custom_chatbot_v1

./: README.md  pyproject.toml
data/: lecture_notes.txt
src/: code.ipynb
