[tool.poetry]
name = "lm-custom-chatbot-v1"
version = "0.1.0"
description = ""
authors = ["maver01 <matteo.sabadin4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
transformers = "^4.44.2"
datasets = "^2.21.0"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
tf-keras = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
